[package]
name = "bevy-car-box"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy_infinite_grid = "0.13.0"
bevy_trackball = "0.7"
avian3d = { version  = "0.1.2", optional = true }
bevy_rapier3d = { version = "0.27.0", optional = true }
bevy_mod_outline = "0.8"
image = "0.24.7"
winit = "0.30"


[features]
default = ["bevy_rapier3d"]

